tests/ui/struct_subcommand.stderr
error: proc-macro derive panicked
  --> $DIR/struct_subcommand.rs:13:10
   |
13 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: subcommand is only allowed on fields
